cabal-version:      3.0
name:               pandoc-codecs
version:            0.1.0.0
synopsis:           Schema and encoding/decoding for selected pandoc types.
-- description:
license:            GPL-2.0-or-later
license-file:       LICENSE
author:             Albert Krewinkel
maintainer:         albert+pandoc@tarleb.com
copyright:          © 2025 Albert Krewinkel
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options:        -Wall

common common-dependencies
  build-depends:      base                  >= 4.12   && < 5
                    , bytestring            >= 0.9    && < 0.13

library
  import:             warnings
                    , common-dependencies
  exposed-modules:    Text.Pandoc.Codecs
  build-depends:    , aeson                 >= 2.0    && < 2.3
                    , autodocodec           >= 0.5    && < 0.6
                    , autodocodec-schema    >= 0.2    && < 0.3
                    , doctemplates          >= 0.11   && < 0.12
                    -- The library defines orphan instances; PVP
                    -- requires to fix the minor version.
                    , pandoc-types
                    , pandoc                >= 3.7.0  && < 3.8
                    , text
  hs-source-dirs:     src
  default-language:   Haskell2010

executable pandoc-codecs
  import:             common-dependencies
                    , warnings
  main-is:            Main.hs
  build-depends:      pandoc-codecs

  hs-source-dirs:     app
  default-language:   Haskell2010

test-suite pandoc-codecs-test
  import:             common-dependencies
                    , warnings
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  build-depends:      pandoc-codecs
