cabal-version:       2.4
name:                pandoc-core
version:             3.0
build-type:          Simple
license:             GPL-2.0-or-later
license-file:        COPYING.md
copyright:           © 2006-2022 John MacFarlane and contributors
author:              John MacFarlane
maintainer:          John MacFarlane <jgm@berkeley.edu>
bug-reports:         https://github.com/jgm/pandoc/issues
homepage:            https://pandoc.org
category:            Text
tested-with:         GHC == 8.6.5
                   , GHC == 8.8.4
                   , GHC == 8.10.7
                   , GHC == 9.0.2
                   , GHC == 9.2.3
synopsis:            Base package for markup conversions.
description:         Building blocks for readers and writers.
extra-source-files:  README.md

source-repository head
  type:                git
  location:            https://github.com/jgm/pandoc.git
  subdir:              pandoc-core

common common-options
  default-language:    Haskell2010
  build-depends:       base         >= 4.12 && < 5
  ghc-options:         -Wall -fno-warn-unused-do-bind
                       -Wincomplete-record-updates
                       -Wnoncanonical-monad-instances
                       -Wcpp-undef
                       -Wincomplete-uni-patterns
                       -Widentities
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-signatures
                       -fhide-source-paths

  if impl(ghc >= 8.10)
    ghc-options:         -Wunused-packages

  if impl(ghc >= 9.0)
    ghc-options:         -Winvalid-haddock

  if os(windows)
    cpp-options:         -D_WINDOWS

common common-library
  build-depends:       SHA                   >= 1.6     && < 1.7
                     , aeson                 >= 2.0      && < 2.2
                     , array                 >= 0.5      && < 0.6
                     , bytestring            >= 0.9      && < 0.12
                     , citeproc              >= 0.8.0.1  && < 0.9
                     , containers            >= 0.6.0.1  && < 0.7
                     , data-default          >= 0.4      && < 0.8
                     , directory             >= 1.2.3    && < 1.4
                     , doclayout             >= 0.4      && < 0.5
                     , doctemplates          >= 0.10     && < 0.11
                     , exceptions            >= 0.8      && < 0.11
                     , filepath              >= 1.1      && < 1.5
                     , http-client           >= 0.4.30   && < 0.8
                     , http-types            >= 0.8      && < 0.13
                     , mtl                   >= 2.2      && < 2.3
                     , network               >= 2.6
                     , network-uri           >= 2.6      && < 2.8
                     , pandoc-types          >= 1.22.2   && < 1.23
                     , parsec                >= 3.1      && < 3.2
                     , random                >= 1        && < 1.3
                     , safe                  >= 0.3.18   && < 0.4
                     , skylighting           >= 0.13     && < 0.14
                     , tagsoup               >= 0.14.6   && < 0.15
                     , text                  >= 1.1.1.0  && < 2.1
                     , time                  >= 1.5      && < 1.14
                     , yaml                  >= 0.11     && < 0.12
library
  import:              common-options
                     , common-library
  build-depends:       Glob                  >= 0.7      && < 0.11
                     , aeson-pretty          >= 0.8.9    && < 0.9
                     , base64                >= 0.4      && < 0.5
                     , case-insensitive      >= 1.2      && < 1.3
                     , connection            >= 0.3.1
                     , gridtables            >= 0.1      && < 0.2
                     , http-client           >= 0.4.30   && < 0.8
                     , http-client-tls       >= 0.2.4    && < 0.4
                     , mime-types            >= 0.1.1    && < 0.2
                     , unicode-collation     >= 0.1.1    && < 0.2
                     , unicode-transforms    >= 0.3      && < 0.5
                     , unicode-collation
                     , unicode-transforms
                     , zip-archive           >= 0.2.3.4  && < 0.5
  exposed-modules:     Text.Pandoc.Asciify
                     , Text.Pandoc.Class
                     , Text.Pandoc.Class.CommonState
                     , Text.Pandoc.Class.IO
                     , Text.Pandoc.Class.PandocIO
                     , Text.Pandoc.Class.PandocMonad
                     , Text.Pandoc.Class.PandocPure
                     , Text.Pandoc.Class.Sandbox
                     , Text.Pandoc.Error
                     , Text.Pandoc.Extensions
                     , Text.Pandoc.Highlighting
                     , Text.Pandoc.Logging
                     , Text.Pandoc.MIME
                     , Text.Pandoc.MediaBag
                     , Text.Pandoc.Options
                     , Text.Pandoc.Parsing
                     , Text.Pandoc.Parsing.Capabilities
                     , Text.Pandoc.Parsing.Citations
                     , Text.Pandoc.Parsing.General
                     , Text.Pandoc.Parsing.GridTable
                     , Text.Pandoc.Parsing.Lists
                     , Text.Pandoc.Parsing.Math
                     , Text.Pandoc.Parsing.Smart
                     , Text.Pandoc.Parsing.State
                     , Text.Pandoc.Parsing.Types
                     , Text.Pandoc.Readers.LaTeX.Types
                     , Text.Pandoc.Shared
                     , Text.Pandoc.Sources
                     , Text.Pandoc.Translations
                     , Text.Pandoc.UTF8
                     , Text.Pandoc.XML
  other-modules:       Paths_pandoc_core
  autogen-modules:     Paths_pandoc_core
  hs-source-dirs:      src
